wip: product-readiness pass (snapshot before resuming)